fix: bullet-points overflow: hidden

--- a/blocks/bullet-points/bullet-points.css
+++ b/blocks/bullet-points/bullet-points.css
@@ -1,3 +1,4 @@
 .bullet-points {
   position: relative;
+  overflow: hidden;
 }
